[package]
name = "solochain-template-node"
description = "A solochain node template built with Substrate, part of Polkadot Sdk."
version = "0.1.0"
license = "Unlicense"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-solochain-template.git"
edition = "2021"
publish = false

build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
futures = { version = "0.3.31", features = ["thread-pool"] }
serde_json = { version = "1.0.132", default-features = true }
jsonrpsee = { version = "0.24.3", features = ["server"] }
sc-cli = { version = "0.50.1", default-features = true }
sp-core = { version = "35.0.0", default-features = true }
sc-executor = { version = "0.41.0", default-features = true }
sc-network = { version = "0.48.3", default-features = true }
sc-service = { version = "0.49.0", default-features = true }
sc-telemetry = { version = "28.0.0", default-features = true }
sc-transaction-pool = { version = "38.1.0", default-features = true }
sc-transaction-pool-api = { version = "38.1.0", default-features = true }
sc-offchain = { version = "43.0.0", default-features = true }
sc-consensus = { version = "0.47.0", default-features = true }
sc-consensus-aura = { version = "0.48.0", default-features = true }
sp-consensus-aura = { version = "0.41.0", default-features = true }
sc-consensus-grandpa = { version = "0.33.0", default-features = true }
sp-consensus-grandpa = { version = "22.0.0", default-features = true }
sp-genesis-builder = { version = "0.16.0", default-features = true }
sc-client-api = { version = "38.0.0", default-features = true }
sc-basic-authorship = { version = "0.48.0", default-features = true }
sp-runtime = { version = "40.1.0", default-features = true }
sp-io = { version = "39.0.0", default-features = true }
sp-timestamp = { version = "35.0.0", default-features = true }
sp-inherents = { version = "35.0.0", default-features = true }
sp-keyring = { version = "40.0.0", default-features = true }
sp-api = { version = "35.0.0", default-features = true }
sp-blockchain = { version = "38.0.0", default-features = true }
sp-block-builder = { version = "35.0.0", default-features = true }
frame-system = { version = "39.1.0", default-features = true }
frame-metadata-hash-extension = { version = "0.7.0", default-features = true }

substrate-frame-rpc-system = { version = "42.0.0", default-features = true }
solochain-template-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { version = "11.0.0", default-features = true }

[features]
default = ["std"]
std = ["solochain-template-runtime/std"]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"solochain-template-runtime/try-runtime",
	"sp-runtime/try-runtime",
]
