[package]
name = "solochain-template-node"
description = "A solochain node template built with Substrate, part of Polkadot Sdk."
version = "0.1.0"
license = "Unlicense"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-solochain-template.git"
edition = "2021"
publish = false

build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
futures = { version = "0.3.31", features = ["thread-pool"] }
serde_json = { version = "1.0.132", default-features = false }
jsonrpsee = { version = "0.24.3", features = ["server"] }
sc-cli = { version = "0.50.1", default-features = false }
sp-core = { version = "35.0.0", default-features = false }
sc-executor = { version = "0.41.0", default-features = false }
sc-network = { version = "0.48.3", default-features = false }
sc-service = { version = "0.49.0", default-features = false }
sc-telemetry = { version = "28.0.0", default-features = false }
sc-transaction-pool = { version = "38.1.0", default-features = false }
sc-transaction-pool-api = { version = "38.1.0", default-features = false }
sc-offchain = { version = "43.0.0", default-features = false }
sc-consensus = { version = "0.47.0", default-features = false }
sc-consensus-aura = { version = "0.48.0", default-features = false }
sp-consensus-aura = { version = "0.41.0", default-features = false }
sc-consensus-grandpa = { version = "0.33.0", default-features = false }
sp-consensus-grandpa = { version = "22.0.0", default-features = false }
sp-genesis-builder = { version = "0.16.0", default-features = false }
sc-client-api = { version = "38.0.0", default-features = false }
sc-basic-authorship = { version = "0.48.0", default-features = false }
sp-runtime = { version = "40.1.0", default-features = false }
sp-io = { version = "39.0.0", default-features = false }
sp-timestamp = { version = "35.0.0", default-features = false }
sp-inherents = { version = "35.0.0", default-features = false }
sp-keyring = { version = "40.0.0", default-features = false }
sp-api = { version = "35.0.0", default-features = false }
sp-blockchain = { version = "38.0.0", default-features = false }
sp-block-builder = { version = "35.0.0", default-features = false }
frame-system = { version = "39.1.0", default-features = false }
frame-metadata-hash-extension = { version = "0.7.0", default-features = false }

substrate-frame-rpc-system = { version = "42.0.0", default-features = false }
solochain-template-runtime = { path = "../runtime",default-features = false }

[build-dependencies]
substrate-build-script-utils = { version = "11.0.0", default-features = false }

[profile.release]
panic = "abort"

[features]
default = ["std"]
std = ["solochain-template-runtime/std"]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"solochain-template-runtime/try-runtime",
	"sp-runtime/try-runtime",
]

