[package]
name = "solochain-template-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
version = "0.1.0"
license = "Unlicense"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-solochain-template.git"
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { version = "3.6.12", package = "parity-scale-codec", features = ["derive"], default-features = false }
scale-info = { version = "2.11.1", features = ["derive", "serde"], default-features = false }
serde_json = { version = "1.0.132", default-features = false, features = ["alloc"] }
frame-support = { version = "39.1.0", features = ["experimental"], default-features = false }
frame-system = { version = "39.1.0", default-features = false }
frame-try-runtime = { version = "0.45.0", optional = true, default-features = false }
frame-executive = { version = "39.1.0", default-features = false }
frame-metadata-hash-extension = { version = "0.7.0", default-features = false }
pallet-aura = { version = "38.1.0", default-features = false }
pallet-balances = { version = "40.1.0", default-features = false }
pallet-grandpa = { version = "39.1.0", default-features = false }
pallet-timestamp = { version = "38.0.0", default-features = false }
sp-api = { version = "35.0.0", default-features = false }
sp-block-builder = { version = "35.0.0", default-features = false }
sp-consensus-aura = { version = "0.41.0", features = ["serde"], default-features = false }
sp-consensus-grandpa = { version = "22.0.0", features = ["serde"], default-features = false }
sp-keyring = { version = "40.0.0", default-features = false }
sp-core = { version = "35.0.0", features = ["serde"], default-features = false }
sp-inherents = { version = "35.0.0", default-features = false }
sp-offchain = { version = "35.0.0", default-features = false }
sp-runtime = { version = "40.1.0", features = ["serde"], default-features = false }
sp-session = { version = "37.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-transaction-pool = { version = "35.0.0", default-features = false }
sp-version = { version = "38.0.0", features = ["serde"], default-features = false }
sp-genesis-builder = { version = "0.16.0", default-features = false }
frame-system-rpc-runtime-api = { version = "35.0.0", default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "25.0.0", optional = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-metadata-hash-extension/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"serde_json/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-keyring/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]
