[package]
name = "solochain-template-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
version = "0.1.0"
license = "Unlicense"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-solochain-template.git"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { version = "2.11.1", features = ["derive", "serde"], default-features = false }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.132", default-features = false, features = ["alloc"] }

frame-metadata-hash-extension = { version = "0.7.0", default-features = false }

sp-api = { version = "35.0.0", default-features = false }
sp-block-builder = { version = "35.0.0", default-features = false }
sp-consensus-aura = { version = "0.41.0", features = ["serde"], default-features = false }
sp-consensus-grandpa = { version = "22.0.0", features = ["serde"], default-features = false }
sp-keyring = { version = "36.0.0", default-features = false }
sp-core = { version = "35.0.0", features = ["serde"], default-features = false }
sp-inherents = { version = "35.0.0", default-features = false }
sp-offchain = { version = "35.0.0", default-features = false }
sp-runtime = { version = "40.1.0", features = ["serde"], default-features = false }
sp-session = { version = "37.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-transaction-pool = { version = "35.0.0", default-features = false }
sp-version = { version = "38.0.0", features = ["serde"], default-features = false }
sp-genesis-builder = { version = "0.16.0", default-features = false }
frame-system-rpc-runtime-api = { version = "35.0.0", default-features = false }
sp-application-crypto = { version = "39.0.0", default-features = false }
parity-scale-codec = { version = "3.7.4", default-features = false, features = ["derive"] }
log = "0.4"
sp-io = { version = "39.0.0", default-features = false }
hex-literal = { version = "1.0.0", default-features = false }
getrandom = { version = "0.2.10", default-features = false, features = ["js"] }
sp-std = { version = "14.0.0", default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "22.0.0", optional = true }

[features]
default = ["std"]
std = [
	"frame-metadata-hash-extension/std",
	

	"scale-info/std",
	"serde_json/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-keyring/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
	"parity-scale-codec/std",
	"sp-application-crypto/std",
	"getrandom/std",
	"sp-std/std",
]

try-runtime = [

	"sp-runtime/try-runtime",
]

[package.metadata.wasm-build]
rustflags = [
  "-C", "panic=abort",
]


[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]
